<resources>
    <string name="app_name">Movies</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="synopsis">Synopsis</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="country">Country</string>
    <string name="search">Search</string>

    <string name="type">Type: %s</string>
</resources>